--- a/src/main/resources/templates/MyOrder.html
+++ b/src/main/resources/templates/MyOrder.html
@@ -323,14 +323,14 @@
 							<thead>
 								<tr>
 									<th class="en" scope="col">번호</th>
-									<th scope="col">거래구분</th>
+									<th scope="col">메뉴명</th>
 									<th scope="col">결제방법</th>
 									<th scope="col">매장명</th>
 									<th scope="col">날짜</th>
 									<th scope="col">결제금액</th>
 								</tr>
 							</thead>
-							<tbody><tr>         <td>1</td>         <td>선불</td>         <td>카카오페이</td>         <td>CafeDream</td>          <td>2023.10.14 00:42</td>           <td>2,500원</td>               </tr></tbody>
+							<tbody><tr>         <td>1</td>         <td>아이스아메리카노</td>         <td>카카오페이</td>         <td>CafeDream</td>          <td>2023.10.14 00:42</td>           <td>2,500원</td>               </tr></tbody>
 						</table>
 						<script id="cardUseHist" type="text/x-jquery-tmpl">
 							<tr>
