--- a/src/main/resources/templates/Q&A_check.html
+++ b/src/main/resources/templates/Q&A_check.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
-<link rel="stylesheet" href="Q&A_check.css">
-<link rel="stylesheet" href="all.css">
+<link rel="stylesheet" href="/css/Q&A_check.css">
+<link rel="stylesheet" href="/css/all.css">
 	<title>Q&A 상세조회</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
