--- a/src/main/resources/templates/Q&A_write.html
+++ b/src/main/resources/templates/Q&A_write.html
@@ -295,7 +295,7 @@
 								</a>
 							</div>
 						</div>
-						<form name="submit_form" id="submit_form" method="post" action="/board/notice/write">
+						<form name="submit_form" id="submit_form" method="post" action="/board/QnA/write">
 							<input type="hidden" name="customer_category" id="customer_category" value="2">
 							<input type="hidden" name="customer_tbl_area1_erp" id="customer_tbl_area1_erp" value="">
 							<input type="hidden" name="customer_tbl_area2_erp" id="customer_tbl_area2_erp" value="">
