--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -273,7 +273,7 @@
 									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 										<ul>
 											<li>
-												<a href="/board/QnA">공지사항</a><br>
+												<a href="/board/notice">공지사항</a><br>
 											</li>
 											<li>
 												<a href="/board/QnA">Q&A</a><br>
