--- a/src/main/resources/templates/notice.html
+++ b/src/main/resources/templates/notice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
-<link rel="stylesheet" href="news.css">
+<link rel="stylesheet" href="/css/news.css">
 	<title>공지사항</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -37,7 +37,7 @@
 	<meta property="al:android:package" content="org.applinks">
 	<meta property="al:web:url" content="http://applinks.org/documentation">
 	
-	<link rel="stylesheet" href="header.css">
+	<link rel="stylesheet" href="/css/header.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="header.js"></script> 
 	
@@ -190,13 +190,13 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+						<img src="/image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_basket">
 					<a href="#">
-						<img src="image/basket.png" class="icon_basket_img_fixed">
+						<img src="/image/basket.png" class="icon_basket_img_fixed">
 					</a>
 				</div>
 
@@ -399,62 +399,51 @@
 											</tr>
 										</thead>
 										<tbody>
-																							<tr>
-													<td class="board_pc">공지</td>
-													<td>
-														<div class="text_wrap">
-															<div class="text">
-																<a href="http://localhost:8080/CafeWeb/%EC%9E%85%EC%A0%90%EB%AC%B8%EC%9D%98/%EC%9E%85%EC%A0%90%EC%A0%91%EC%88%98.html#">
-																	<em>
-																		CAFE DREAM 입점접수																	</em>
-																</a>
-															</div>
-														</div>
-													</td>
-													<td class="board_pc"> CAFE DREAM</td>
-													<td>2023-08-30</td>
-													<td class="board_pc">457</td>
-												</tr>
-																																				<tr>
-															<td class="board_pc">2</td>
-															<td>
-																<div class="text_wrap">
-																	<div class="text">
-																		<a href="detail/?bbs_idx=177&amp;bbs_category=4&amp;bbs_detail_category=&amp;bbs_page=1">
-																			<em>
-																				CAFE DREAM 원두 관련 공지																			</em>
-																		</a>
-																																			</div>
-																</div>
-															</td>
-															<td class="board_pc">CAFE DREAM</td>
-															<td>2023-07-01</td>
-															<td class="board_pc">407</td>
-														</tr>
-																									<tr>
-															<td class="board_pc">1</td>
-															<td>
-																<div class="text_wrap">
-																	<div class="text">
-																		<a href="detail/?bbs_idx=176&amp;bbs_category=4&amp;bbs_detail_category=&amp;bbs_page=1">
-																			<em>
-																				CAFE DREAM 신메뉴 관련 공지																		</em>
-																		</a>
-																																			</div>
-																</div>
-															</td>
-															<td class="board_pc">CAFE DREAM</td>
-															<td>2023-03-21</td>
-															<td class="board_pc">851</td>
-														</tr>
 
-																					</tbody>
+										<tr th:each="board: ${boardList}">
+
+											<td class="board_pc" th:text="${board.id}" ></td>
+											<td>
+
+												<div class="text_wrap">
+													<div class="text">								<!--공지사항은 board.noticeTitle 이런식으로 해줘야함 뒤에 ㅇㅇ -->
+														<a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.noticeTitle}"></a>
+
+													</div>
+												</div>
+											</td>
+
+											<td class="board_pc">CAFE DREAM</td>
+											<td th:text="*{#temporals.format(board.noticeCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+											<td class="board_pc" th:text="${board.noticeHits}" ></td>
+										</tr>
+
+										</tbody>
 									</table>
 								</div>
 												<div class="board_page_wrap">
 							<div class="board_page">
 								<ul>
-									<li class="fo_re"><a><span>처음</span></a></li><li class="board_page_check"><a><span>1</span></a></li><li><a class="board_page_link" href="?bbs_category=4&amp;bbs_detail_category=&amp;bbs_page=4" &bbs_search_category="&amp;bbs_search='"><span>마지막</span></a></li>								</ul>
+									<li class="fo_re">
+										<a th:href="@{/board/QnA(page=1)}">
+											<span>처음</span>
+										</a>
+									</li>
+
+									<li class="board_page_check">
+											<span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+										<!-- 현재페이지는 링크 없이 숫자만 -->
+												<!--												<span><a th:href="@{/board/QnA(page=${page})}" th:text="${page}"></a></span>-->
+												<span><a th:href="@{|/board/QnA?search_category=${searchCategory}&search=${search}&page=${page}|}"th:text="${page}"></a></span>
+											</span>
+									</li>
+
+									<li>
+										<a th:href="@{/board/QnA(page=${boardList.totalPages})}">
+											<span>마지막</span>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</div>
 					</div>
@@ -488,7 +477,7 @@
 									<ul>
 										<li>
 											<div class="foot_logo">
-												<img src="image/logo.png">
+												<img src="/image/logo.png">
 											</div>
 										</li>
 									</ul>
