--- a/src/main/resources/templates/MyQ&AA.html
+++ b/src/main/resources/templates/MyQ&AA.html
@@ -356,62 +356,54 @@
 											</tr>
 										</thead>
 										<tbody>
-																																				<tr>
-															<td class="board_pc">3</td>
-															<td>
-																<div class="text_wrap">
-																	<div class="text">
-																		<a href="detail/?bbs_idx=230&amp;bbs_category=7&amp;bbs_detail_category=&amp;bbs_page=1">
-																			<em>
-																				123																			</em>
-																		</a>
-																																			</div>
-																</div>
-															</td>
-															<td class="board_pc"> ㅇㅇ </td>
-															<td>2023-10-06</td>
-															<td class="board_pc">2</td>
-														</tr>
-																									<tr>
-															<td class="board_pc">2</td>
-															<td>
-																<div class="text_wrap">
-																	<div class="text">
-																		<a href="detail/?bbs_idx=229&amp;bbs_category=7&amp;bbs_detail_category=&amp;bbs_page=1">
-																			<em>
-																				456																			</em>
-																		</a>
-																																			</div>
-																</div>
-															</td>
-															<td class="board_pc"> ㅇㅇ </td>
-															<td>2023-10-04</td>
-															<td class="board_pc">315</td>
-														</tr>
-																									<tr>
-															<td class="board_pc">1</td>
-															<td>
-																<div class="text_wrap">
-																	<div class="text">
-																		<a href="detail/?bbs_idx=225&amp;bbs_category=7&amp;bbs_detail_category=&amp;bbs_page=1">
-																			<em>
-																				789																			</em>
-																		</a>
-																																			</div>
-																</div>
-															</td>
-															<td class="board_pc"> ㅇㅇ </td>
-															<td>2023-09-19</td>
-															<td class="board_pc">205</td>
-														</tr>
+										<tr th:each="board: ${boardList}">
 
-																					</tbody>
+											<td class="board_pc" th:text="${board.id}" ></td>
+											<td>
+
+												<div class="text_wrap">
+													<div class="text">								<!--공지사항은 board.noticeTitle 이런식으로 해줘야함 뒤에 ㅇㅇ -->
+														<a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></a>
+
+													</div>
+												</div>
+											</td>
+
+											<td class="board_pc">CAFE DREAM</td>
+											<td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+											<td class="board_pc" th:text="${board.boardHits}" ></td>
+										</tr>
+
+
+
+										</tbody>
 									</table>
 								</div>
 							<div class="board_page_wrap">
 							<div class="board_page">
 								<ul>
-									<li class="fo_re"><a><span>처음</span></a></li><li class="board_page_check"><a><span>1</span></a></li><li><a><span>마지막</span></a></li>								</ul>
+									<li class="fo_re">
+										<a th:href="@{/board/QnA(page=1)}">
+											<span>처음</span>
+										</a>
+									</li>
+
+									<li class="board_page_check">
+											<span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+										<!-- 현재페이지는 링크 없이 숫자만 -->
+												<!--												<span><a th:href="@{/board/QnA(page=${page})}" th:text="${page}"></a></span>-->
+												<span><a th:href="@{|/board/QnA?search_category=${searchCategory}&search=${search}&page=${page}|}"th:text="${page}"></a></span>
+											</span>
+									</li>
+
+									<li>
+										<a th:href="@{/board/QnA(page=${boardList.totalPages})}">
+											<span>마지막</span>
+										</a>
+									</li>
+
+
+								</ul>
 							</div>
 						</div>
 					</div>
