--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -195,7 +195,7 @@
 				</div>
 
 				<div class="icon_basket">
-					<a href="#">
+					<a href="/cart/list">
 						<img src="/image/basket.png" class="icon_basket_img_fixed">
 					</a>
 				</div>
