--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -307,7 +307,8 @@
                             	<!-- s::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
 
                                 <article class="ms_user_info_right">
-                                    <p class="ms_user_stat"><span><strong class="userName" th:text="${userInfo.name}">유진<!-- 홍길동 --></strong> 님 안녕하세요!</span><br><b <span>현재 사용 가능한 쿠폰은 *개 입니다.</span></p>
+                                    <p class="ms_user_stat"><span><strong class="userName" th:text="${userInfo.name}">유진<!-- 홍길동 --></strong> 님 안녕하세요!</span><br>
+										<b <span th:text="${coupon}"></span></p>
                                     <!-- 20200805 PLCC 추가 -->
                                		<div class="plcc-logo" style="display:none;">
                                			<img src="/common/img/util/plcc-logo.png" alt="Hyundai Card + STARBUCKS">
