--- a/src/main/resources/templates/menuRegister.html
+++ b/src/main/resources/templates/menuRegister.html
@@ -28,7 +28,7 @@
 
 <body>
 <div class="layout">
-    <form action="/menu/menuRegister" method="post" enctype="multipart/form-data">
+    <form action="/admin/menu/register" method="post" enctype="multipart/form-data">
         <p>메뉴명<input name="menuName" type="text"></p>
         <p>가격<input name="menuPrice" type="number" ></p>
 
