어드민페이지 공지적용, 전체적인코드 주석추가

--- a/src/main/resources/templates/adminMain.html
+++ b/src/main/resources/templates/adminMain.html
@@ -8,5 +8,6 @@
     <a href="/admin/users">회원관리</a>
     <a href="/admin/menu">메뉴관리</a>
     <a href="/admin/order">주문관리</a>
+    <a href="/board/notice/write">공지사항작성</a>
 </body>
 </html>
