--- a/src/main/resources/templates/notice.html
+++ b/src/main/resources/templates/notice.html
@@ -407,7 +407,7 @@
 
 												<div class="text_wrap">
 													<div class="text">								<!--공지사항은 board.noticeTitle 이런식으로 해줘야함 뒤에 ㅇㅇ -->
-														<a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.noticeTitle}"></a>
+														<a th:href="@{|/board/notice/${board.id}|(page=${boardList.number + 1})}" th:text="${board.noticeTitle}"></a>
 
 													</div>
 												</div>
@@ -425,7 +425,7 @@
 							<div class="board_page">
 								<ul>
 									<li class="fo_re">
-										<a th:href="@{/board/QnA(page=1)}">
+										<a th:href="@{/board/notice(page=1)}">
 											<span>처음</span>
 										</a>
 									</li>
@@ -434,12 +434,12 @@
 											<span th:each="page: ${#numbers.sequence(startPage, endPage)}">
 										<!-- 현재페이지는 링크 없이 숫자만 -->
 												<!--												<span><a th:href="@{/board/QnA(page=${page})}" th:text="${page}"></a></span>-->
-												<span><a th:href="@{|/board/QnA?search_category=${searchCategory}&search=${search}&page=${page}|}"th:text="${page}"></a></span>
+												<span><a th:href="@{|/board/notice?search_category=${searchCategory}&search=${search}&page=${page}|}"th:text="${page}"></a></span>
 											</span>
 									</li>
 
 									<li>
-										<a th:href="@{/board/QnA(page=${boardList.totalPages})}">
+										<a th:href="@{/board/notice(page=${boardList.totalPages})}">
 											<span>마지막</span>
 										</a>
 									</li>
