--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -16,7 +16,7 @@
                     <tr>
                         <td></td>
                         <td colspan="2">상품정보</td>
-                        <td>옵션</td>
+                        <td>수량</td>
                         <td>상품금액</td>
                     </tr>
                 </thead>
@@ -26,12 +26,9 @@
                         <td><img src="image/keyboard.jpg" alt="magic keyboard"></td>
                         <td><a href="#">애플 공식 브랜드스토어</a><span class="cart__list__smartstore"> 스마트스토어</span>
                             <p>Apple 매직 키보드 - 한국어(MK2A3KH/A)</p>
-                            <span class="price">116,62원</span>
-                            <span style="text-decoration: line-through; color: lightgray;">119,000</span>
                         </td>
                         <td class="cart__list__option">
-                            <p>모델명 : 키보드 - 한국어 MK2A3KH/A / 1개</p>
-                            <button class="cart__list__optionbtn">주문조건 추가/변경</button>
+                            <span> 1개</span>
                         </td>
                         <td><span class="price">116,620원</span><br>
                         </td>
@@ -43,11 +40,9 @@
                         </td>
                         <td style="width: 27%;"><a href="#">컴퓨존</a><span class="cart__list__smartstore"> 스마트스토어</span>
                             <p>[애플] Magic Mouse [MK2E3KH/A]</p>
-                            <span class=" price">88,900원</span>
                         </td>
                         <td class="cart__list__option" style="width: 27%;">
-                            <p>상품 주문 수량: 1개</p>
-                            <button class="cart__list__optionbtn">주문조건 추가/변경</button>
+                            <span> 1개</span>
                         </td>
                         <td style="width: 15%;"><span class="price">88,900원</span><br>
                         </td>
@@ -63,10 +58,20 @@
                 </tfoot>
             </form>
         </table>
+        <div class="total">
+        	<div class="total_price">
+                            <tr>
+                                <ul>주문금액</ul>
+                                <li>26,000</li>
+                                </tr>
+                                </div>
+                  </div>
         <div class="cart__mainbtns">
             <input type="submit" value="쇼핑 계속하기" class="cart__bigorderbtn left">
             <input type="submit" value="주문하기" class="cart__bigorderbtn right">
         </div>
     </section>
+    
+   
 </body>
 </html>
