--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/basket.css">
+    <link rel="stylesheet" href="basket.css">
     <title>장바구니</title>
 </head>
 <body>
